# qbt-rs

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Cargo.toml  README.md  debug.cpp  debug.h  logger.cpp  logger.h  main.cpp  vcpkg.json
fs/: core.h  fs.cpp
qbt/: core.h  qbt.cpp  qbt.h  shell.cpp  shell.h  torrent.cpp  torrent.h  torrentContents.h  torrentList.h  web.cpp  web.h
src/: lib.rs  main.rs
src/fs/: core.rs  mod.rs
src/qbt/: application.rs  core.rs  log.rs  mod.rs  torrents.rs  transfer.rs
src/shell/: mod.rs
tui/: tui.cpp  tui.h
