[package]
name = "qbt-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.40"
ego-tree = "0.9.0"
env_logger = "0.11.7"
fuser = "0.15.0"
libc = "0.2.164"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["blocking", "cookies", "json"] }
rustyline = { version = "14.0.0", features = ["with-file-history"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_repr = "0.1.19"
strum = { version = "0.27.1", features = ["strum_macros", "derive"] }
strum_macros = "0.27.1"


[lints.rust]
unused = "allow"
unsafe_code = "forbid"
